--- a/NotHotdogSolution/Base.lproj/Main.storyboard
+++ b/NotHotdogSolution/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hr4-17-QAM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -23,7 +23,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="100" id="5f4-bv-IiS">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="100" id="5f4-bv-IiS" customClass="HistoryCell" customModule="NotHotdogSolution" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5f4-bv-IiS" id="c6R-uc-zeX">
@@ -73,6 +73,12 @@
                                                 <constraint firstItem="HKm-SE-XZH" firstAttribute="leading" secondItem="q0K-5Y-sp8" secondAttribute="trailing" constant="8" id="tPh-sU-hVw"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="dateLabel" destination="HKm-SE-XZH" id="ScK-Pp-bPN"/>
+                                            <outlet property="foodItemImageView" destination="q0K-5Y-sp8" id="0h6-f5-4b8"/>
+                                            <outlet property="statusImageView" destination="VJL-pE-hk6" id="7d6-yM-eQo"/>
+                                            <outlet property="titleLabel" destination="qIC-XT-TxU" id="qgy-Hq-Gfk"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -81,8 +87,15 @@
                         <viewLayoutGuide key="safeArea" id="iWU-d6-Hdu"/>
                     </view>
                     <navigationItem key="navigationItem" title="Not Hotdog" id="JbW-Bm-2zW">
-                        <barButtonItem key="rightBarButtonItem" systemItem="camera" id="XrB-ft-OSQ"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="camera" id="XrB-ft-OSQ">
+                            <connections>
+                                <action selector="launchCamera:" destination="0E3-PH-jCe" id="T8O-fX-Y7J"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="TeO-Im-XyE" id="rmZ-DB-8Jh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gPI-cI-B1W" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
